# image_processing

./: README.md
image_processing/: CMakeLists.txt  package.xml
image_processing/cfg/: hsvThresh.cfg
image_processing/launch/: camera_node_bottom.launch  camera_node_front.launch
image_processing/src/: objectHelisPath.cpp  objectPolygonPath.cpp  objectRectanglePath.cpp  object_positioning.cpp  polar_coordinate.cpp  pose_estimate.cpp  positioning4DOF.cpp  videoWriter.cpp  xy_control.cpp  xyz_control.cpp  yz_control.cpp
object_position_msgs/: CMakeLists.txt  package.xml
object_position_msgs/msg/: ObjectPositionMsg.msg
pylon_camera/: CMakeLists.txt  package.xml
pylon_camera/src/: custom_pylon_node.cpp
teme_msgs/: CMakeLists.txt  package.xml
teme_msgs/msg/: PoseArray.msg
